--- a/Controls/HeatMapControl.xaml
+++ b/Controls/HeatMapControl.xaml
@@ -6,6 +6,7 @@
     xmlns:local="using:CryptoPortfolioTracker.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    
     xmlns:lvc="using:LiveChartsCore.SkiaSharpView.WinUI"
     xmlns:viewmodels="using:CryptoPortfolioTracker.ViewModels"
     xmlns:enums="using:CryptoPortfolioTracker.Enums"
@@ -18,7 +19,7 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
     d:DataContext="{d:DesignInstance Type=viewmodels:DashboardViewModel}"
     xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
-    Loaded="Control_Loaded"
+    Loading="Control_Loading"
     mc:Ignorable="d">
 
     <UserControl.Resources>
@@ -291,7 +292,6 @@
         <TextBlock Grid.Row="1" l:Uids.Uid="HeatMapView_NoTargets" Margin="10,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Center"
                    TextWrapping="Wrap" Visibility="{Binding HasTargets, Converter={StaticResource BoolToVisibilityConverter}}"/>
 
-
         <lvc:CartesianChart
             Grid.Row="1" SizeChanged="HeatMap_SizeChanged"
             x:Name="thisChart"
@@ -302,6 +302,9 @@
             Sections="{Binding SectionsHeatMap}"
             TooltipTextSize="12"
             Margin="0,10,10,0">
+
+            
+
         </lvc:CartesianChart>
 
         <muxc:TeachingTip x:Name="MyTeachingTipRsi" l:Uids.Uid="HeatMap_TeachRsi" Target="{x:Bind rbtHeatMap}"
