--- a/Views/AccountsView.xaml
+++ b/Views/AccountsView.xaml
@@ -16,6 +16,9 @@
     
     <Page.Resources>
         <converters:BoolToRowDefConverter x:Key="BoolToRowDefConverter"/>
+        <converters:RowDefConverterParameters x:Key="ParamsRow0" Text="100|1*" XamlRoot="{x:Bind AccountsContent.XamlRoot}" />
+        <converters:RowDefConverterParameters x:Key="ParamsRow1" Text="1*|0" XamlRoot="{x:Bind AccountsContent.XamlRoot}" />
+
 
         <Style x:Key="HorizontalSwipe" TargetType="ListViewItem" BasedOn="{StaticResource DefaultListViewItemStyle}">
             <Setter Property="Height" Value="60"/>
@@ -35,21 +38,22 @@
             <controls:HomePageHeaderImage Grid.Row="0" Grid.RowSpan="3" Height="265" VerticalAlignment="Top"/>
             <RelativePanel>
                 <TextBlock AutomationProperties.AutomationId="__ClickableAreaTextBlock" />
-                <TextBlock x:Name="smallHeaderText" Text="Crypto Portfolio Tracker" Foreground="DarkGoldenrod" Margin="36,20,0,0" VerticalAlignment="Top" Style="{StaticResource TitleTextBlockStyle}"/>
-                <TextBlock l:Uids.Uid="Accounts_Title" x:Name="txtAccounts" Margin="36,10,0,0" Foreground="DarkGoldenrod" Style="{StaticResource SampleHeaderTextStyle}" RelativePanel.Below="smallHeaderText" />
-                <helpers:CustomBtn Width="30" Padding="2,2,2,2" Margin="0,0,0,0" Style="{StaticResource MK_ButtonStyle}" BorderThickness="0"
+                <TextBlock x:Name="smallHeaderText" Text="Crypto Portfolio Tracker" Foreground="DarkGoldenrod" Margin="36,0,0,0" VerticalAlignment="Top" Style="{StaticResource TitleTextBlockStyle}"/>
+                <TextBlock x:Name="txtPortfolio" Margin="36,0,0,0" Text="{Binding PortfolioName}"  Foreground="DarkGoldenrod" Style="{StaticResource SubSampleHeaderTextStyle}" RelativePanel.Below="smallHeaderText" />
+                <TextBlock l:Uids.Uid="Accounts_Title" x:Name="txtAccounts" Margin="36,5,0,0" Foreground="DarkGoldenrod" Style="{StaticResource SampleHeaderTextStyle}" RelativePanel.Below="txtPortfolio" />
+                <helpers:CustomBtn Width="25" Padding="2,2,2,2" Margin="0,0,0,0" Style="{StaticResource MK_ButtonStyle}" BorderThickness="0"
                     Command="{Binding TogglePrivacyModeCommand}" RelativePanel.RightOf="txtAccounts" RelativePanel.AlignBottomWith="txtAccounts" 
                     ToolTipService.ToolTip="Toggle privacy" >
-                    <FontIcon x:Name="Icon" Glyph="{Binding GlyphPrivacy}" FontWeight="Normal" Width="20" Foreground="Black"/>
+                    <FontIcon x:Name="Icon" Glyph="{Binding GlyphPrivacy}" FontSize="15" FontWeight="Normal" Width="20" Foreground="Black"/>
 
                 </helpers:CustomBtn>
             </RelativePanel>
             <TextBlock l:Uids.Uid="Accounts_Explainer" Grid.Row="1" VerticalAlignment="Bottom" Style="{StaticResource ExplainerTextStyle}" Margin="35,0,20,20" TextWrapping="Wrap"/>
             <Border Grid.Row="2" VerticalAlignment="Stretch" Margin="10,0,0,0">
-                <Grid Name="AccountsContent">
+                <Grid x:Name="AccountsContent">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="{Binding IsExtendedView, Converter={StaticResource BoolToRowDefConverter}, ConverterParameter=100|1*}"/>
-                        <RowDefinition Height="{Binding IsExtendedView, Converter={StaticResource BoolToRowDefConverter}, ConverterParameter=1*|0}"/>
+                        <RowDefinition Height="{Binding IsExtendedView, Converter={StaticResource BoolToRowDefConverter}, ConverterParameter={StaticResource ParamsRow0}}"/>
+                        <RowDefinition Height="{Binding IsExtendedView, Converter={StaticResource BoolToRowDefConverter}, ConverterParameter={StaticResource ParamsRow1}}"/>
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
                     <controls:AccountsListViewControl x:Name="MyAccountsListViewControl" x:FieldModifier="public" Grid.Row="0" />
