--- a/Views/DashBoardView.xaml
+++ b/Views/DashBoardView.xaml
@@ -61,14 +61,13 @@
             <controls:HomePageHeaderImage Grid.Row="0" Grid.Column="0" Grid.RowSpan="4" Grid.ColumnSpan="3" 
                                           Opacity="0.1" Margin="0,0,0,0" VerticalAlignment="Stretch"/>
             <RelativePanel Grid.Row="0"  Grid.Column="0" Grid.ColumnSpan="3" >
-                <TextBlock x:Name="smallHeaderText" Text="Crypto Portfolio Tracker" Foreground="DarkGoldenrod" 
-                           Margin="10,10,0,0" VerticalAlignment="Top" Style="{StaticResource TitleTextBlockStyle}"/>
-                <TextBlock l:Uids.Uid="Dashboard_Title" x:Name="txtDashboard" Margin="10,5,0,0" 
-                           Foreground="DarkGoldenrod" Style="{StaticResource SampleHeaderTextStyle}" RelativePanel.Below="smallHeaderText" />
-                <helpers:CustomBtn  Padding="2,2,2,2" Margin="0,10,0,0" Width="30" Style="{StaticResource MK_ButtonStyle}" BorderThickness="0" Background="Transparent"
+                <TextBlock x:Name="txtDashboard" l:Uids.Uid="Dashboard_Title" Foreground="DarkGoldenrod" Margin="10,0,0,0" VerticalAlignment="Top" Style="{StaticResource TitleTextBlockStyle}"/>
+                <TextBlock x:Name="txtPortfolio" Margin="10,0,0,0" Text="{Binding PortfolioName}"  Foreground="DarkGoldenrod" Style="{StaticResource SubSampleHeaderTextStyle}" 
+                           RelativePanel.Below="txtDashboard" />
+                 <helpers:CustomBtn  Padding="2,2,2,2" Margin="0,5,0,0" Width="25" Style="{StaticResource MK_ButtonStyle}" BorderThickness="0" Background="Transparent"
                     Command="{Binding TogglePrivacyModeCommand}" RelativePanel.RightOf="txtDashboard" RelativePanel.AlignBottomWith="txtDashboard" 
                     ToolTipService.ToolTip="Toggle privacy">
-                    <FontIcon Glyph="{Binding GlyphPrivacy}" FontWeight="Normal" Width="20" />
+                    <FontIcon Glyph="{Binding GlyphPrivacy}" FontSize="15" FontWeight="Normal" Width="20" />
                 </helpers:CustomBtn>
             </RelativePanel>
 
